snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/maven-metadata.xml.md5
29d48b2e6c0c46a57070ffb7b3b82d31